--- a/threshold_regions.html
+++ b/threshold_regions.html
@@ -28,9 +28,9 @@
 		<div id="threshold-regions-svg-container"></div>
 
 		<!-- The interactive Zonotope drawings -->
-		<script src="external/d3/d3.min.js" charset="utf-8"></script>
-		<script src="external/zonotope.js/zonotope.js"></script>
-		<script src="external/zonotope.js/zonotope_drawings.js"></script>
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script src="zonotope.js"></script>
+		<script src="zonotope_drawings.js"></script>
 
 	</body>
 </html>
