--- a/threshold_regions.html
+++ b/threshold_regions.html
@@ -9,16 +9,16 @@
 		 body, html {
 			 margin: 0;
 			 padding: 0;
+			 width: 100%;
+			 height: 100%;
 		 }
 
-		 #threshold-regions-svg-container {
+		 #threshold-regions-svg-container, svg {
 			 float: left;
 			 width: 100%;
+			 height: 100%;
 			 margin: 0;
 			 padding: 0;
-		 }
-		 #threshold-regions-svg {
-			 float: left;
 		 }
 		 
 		</style>
