added mouse panning and another 3d example

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 
     <script>
      function main(d, n) {
-       var d = d||3;
-       var n = 10;
+       var d = d || 2;
+       var n = 5;
        var degenerate = false;
 
        if ( d == 2 ) {
@@ -167,9 +167,8 @@
 
     <script src="zonotope.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <!--  <script src="three.js/build/three.js"></script>  -->
-    <script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
-
+		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
+		<script src="https://rawgithub.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"></script>
 
   </body>
 
