--- a/examples/threshold_regions.html
+++ b/examples/threshold_regions.html
@@ -29,7 +29,7 @@
 
 		<!-- The interactive Zonotope drawings -->
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-		<script src="zonotope.js"></script>
+		<script src="../build/zonotope.js"></script>
 		<script src="zonotope_drawings.js"></script>
 
 	</body>
