--- a/examples/zonotope_3d.html
+++ b/examples/zonotope_3d.html
@@ -86,7 +86,7 @@
 	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
 	<script src="https://rawgithub.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"></script>
-	<script src="zonotope.js"></script>
+	<script src="../build/zonotope.js"></script>
 
 	<script>
 
