--- a/examples/zonotope_3d.html
+++ b/examples/zonotope_3d.html
@@ -1,221 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Three dimensional zonotope renderer</title>
-	<meta name="author" content="Hordur Freyr Yngvason">
+	<head>
+		<meta charset="utf-8">
+		<title>Three dimensional zonotope renderer</title>
+		<meta name="author" content="Hordur Freyr Yngvason">
 
-	<style>
+		<style>
 
-	body, html {
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		height: 100%;
-		background-color: white;
-	}
+		 body, html {
+			 margin: 0;
+			 padding: 0;
+			 width: 100%;
+			 height: 100%;
+			 background-color: white;
+		 }
 
-	#zonotope-canvas-container {
-		float: left;
-		width: 69%;
-		height: 100%;
-		margin: 0;
-		padding: 0;
-		overflow: none;
-		z-index: 0;
-	}
+		 #zonotope-canvas-container {
+			 float: left;
+			 width: 69%;
+			 height: 100%;
+			 margin: 0;
+			 padding: 0;
+			 overflow: none;
+			 z-index: 0;
+		 }
 
-	#zonotope-canvas-container canvas {
-		height: 99%;
-		margin: 0;
-		padding: 0;
-		background-color: white;
-	}
+		 #zonotope-canvas-container canvas {
+			 height: 99%;
+			 margin: 0;
+			 padding: 0;
+			 background-color: white;
+		 }
 
-	#zonotope-generators-input-form {
-		float: right;
-		width: 30%;
-		height: 100%;
-		background: #eee;
-		margin: 0;
-		padding: 0;
-		z-index: 30;
-	}
+		 #zonotope-generators-input-form {
+			 float: right;
+			 width: 30%;
+			 height: 100%;
+			 background: #eee;
+			 margin: 0;
+			 padding: 0;
+			 z-index: 30;
+		 }
 
-	#zonotope-generators-input-form textarea {
-		color: #666;
-		background: none;
-		float: left;
-		display: block;
-		resize: none;
-		margin: 0;
-		padding: 10px;
-		width: calc(100% - 20px);
-		height: calc(100% - 60px);
-		border: none;
-	}
+		 #zonotope-generators-input-form textarea {
+			 color: #666;
+			 background: none;
+			 float: left;
+			 display: block;
+			 resize: none;
+			 margin: 0;
+			 padding: 10px;
+			 width: calc(100% - 20px);
+			 height: calc(100% - 60px);
+			 border: none;
+		 }
 
-	#zonotope-generators-input-form button {
-		font-size: 20px;
-		float: left;
-		width: 100%;
-		height: 40px;
-		margin: 0;
-		padding: 0;
-		border: none;
-		background: #ccc;
-		color: #333;
-	}
+		 #zonotope-generators-input-form button {
+			 font-size: 20px;
+			 float: left;
+			 width: 100%;
+			 height: 40px;
+			 margin: 0;
+			 padding: 0;
+			 border: none;
+			 background: #ccc;
+			 color: #333;
+		 }
 
-	#zonotope-generators-input-form button:hover {
-		background: #ddd;
-		color: #444;;
-	}
+		 #zonotope-generators-input-form button:hover {
+			 background: #ddd;
+			 color: #444;;
+		 }
 
-	</style>
-</head>
+		</style>
+	</head>
 
-<body onload="init()">
-	<div id="zonotope-canvas-container"></div>
-	<form id="zonotope-generators-input-form">
-		<textarea></textarea>
-		<button type="button" onclick="renderFromInput()">Render</button>
-	</form>
+	<body onload="init()">
+		<div id="zonotope-canvas-container"></div>
+		<form id="zonotope-generators-input-form">
+			<textarea></textarea>
+			<button type="button" onclick="renderFromInput()">Render</button>
+		</form>
 
-	<!-- The interactive Zonotope drawings -->
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-	<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
-	<script src="https://rawgithub.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"></script>
-	<script src="../build/zonotope.js"></script>
+		<!-- The interactive Zonotope drawings -->
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
+		<script src="https://rawgithub.com/mrdoob/three.js/master/examples/js/controls/TrackballControls.js"></script>
+		<script src="../build/zonotope.js"></script>
 
-	<script>
+		<script>
 
-	function getGenerators() {
-		if (zonotopeGeneratorsTextarea.value == "") {
-			return [];
-		}
-		var lines = zonotopeGeneratorsTextarea.value.trim().split('\n');
-		var result = [];
-		var i, currentLine;
-		for ( i = 0; i < lines.length; ++i ) {
-			currentLine = lines[i].split(/[\s]+/);
-			result[i] = {};
-			result[i].x = Number(currentLine[0]);
-			result[i].y = Number(currentLine[1]);
-			result[i].z = Number(currentLine[2]);
-		}
-		return result;
-	}
+		 function getGenerators() {
+			 if (zonotopeGeneratorsTextarea.value == "") {
+				 return [];
+			 }
+			 var lines = zonotopeGeneratorsTextarea.value.trim().split('\n');
+			 var result = [];
+			 var i, currentLine;
+			 for ( i = 0; i < lines.length; ++i ) {
+				 currentLine = lines[i].split(/[\s]+/);
+				 result[i] = {};
+				 result[i].x = Number(currentLine[0]);
+				 result[i].y = Number(currentLine[1]);
+				 result[i].z = Number(currentLine[2]);
+			 }
+			 return result;
+		 }
 
-	function init() {
-		zonotopeGeneratorsTextarea = document.querySelector("#zonotope-generators-input-form textarea");
+		 function init() {
+			 zonotopeGeneratorsTextarea = document.querySelector("#zonotope-generators-input-form textarea");
 
-		var n = 10;
-		var k;
-		generators = randomGenerators(3, n);
-		formStringArray = [];
-		for ( k = 0; k < n; ++k ) {
-			formStringArray[k] = [
-				generators[k].x,
-				generators[k].y,
-				generators[k].z]
-			.join(" ");
-		}
-		zonotopeGeneratorsTextarea.value = formStringArray.join("\n");
-	}
-
-
-	/**
-	* Based on tutorial: http://soledadpenades.com/articles/three-js-tutorials/drawing-the-coordinate-axes/
-	*/
-	function buildSingleAxis( src, dst, colorHex, dashed, dashSize, gapSize ) {
-		var geom = new THREE.Geometry();
-		var mat;
-
-		dashSize = dashSize || 1;
-		gapSize  = gapSize  || dashSize;
-
-		if(dashed) {
-			mat = new THREE.LineDashedMaterial({ linewidth: 3, color: colorHex, dashSize: dashSize, gapSize: gapSize });
-		} else {
-			mat = new THREE.LineBasicMaterial({ linewidth: 3, color: colorHex });
-		}
-
-		geom.vertices.push( src.clone() );
-		geom.vertices.push( dst.clone() );
-		geom.computeLineDistances(); // This one is SUPER important, otherwise dashed lines will appear as simple plain lines
-
-		var axis = new THREE.Line( geom, mat, THREE.LinePieces );
-
-		return axis;
-
-	}
-	/**
-	* Based on tutorial: http://soledadpenades.com/articles/three-js-tutorials/drawing-the-coordinate-axes/
-	* X axis: Red
-	* Y axis: Blue
-	* Z axis: Green
-
-	*/
-	function buildAxesXYZ( axisLength, colorX, colorY, colorZ ) {
-
-		var axes = new THREE.Object3D();
-		colorX = colorX || 0xFF0000; // red
-		colorY = colorY || 0x00FF00; // green
-		colorZ = colorZ || 0x0000FF; // blue
+			 var n = 10;
+			 var k;
+			 generators = randomGenerators(3, n);
+			 formStringArray = [];
+			 for ( k = 0; k < n; ++k ) {
+				 formStringArray[k] = [
+					 generators[k].x,
+					 generators[k].y,
+					 generators[k].z]
+														 .join(" ");
+			 }
+			 zonotopeGeneratorsTextarea.value = formStringArray.join("\n");
+		 }
 
 
-		axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( axisLength, 0,  0 ), colorX, false ) ); // +X
-		axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( -axisLength, 0, 0 ), colorX, true  ) ); // -X
+		 /**
+			* Based on tutorial: http://soledadpenades.com/articles/three-js-tutorials/drawing-the-coordinate-axes/
+			*/
+		 function buildSingleAxis( src, dst, colorHex, dashed, dashSize, gapSize ) {
+			 var geom = new THREE.Geometry();
+			 var mat;
 
-		axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, axisLength,  0 ), colorY, false ) ); // +Y
-		axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, -axisLength, 0 ), colorY, true  ) ); // -Y
+			 dashSize = dashSize || 1;
+			 gapSize  = gapSize  || dashSize;
 
-		axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, 0, axisLength  ), colorZ, false ) ); // +Z
-		axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, 0, -axisLength ), colorZ, true  ) ); // -Z
+			 if(dashed) {
+				 mat = new THREE.LineDashedMaterial({ linewidth: 3, color: colorHex, dashSize: dashSize, gapSize: gapSize });
+			 } else {
+				 mat = new THREE.LineBasicMaterial({ linewidth: 3, color: colorHex });
+			 }
 
-		return axes;
-	}
+			 geom.vertices.push( src.clone() );
+			 geom.vertices.push( dst.clone() );
+			 geom.computeLineDistances(); // This one is SUPER important, otherwise dashed lines will appear as simple plain lines
 
-	function renderGeneratorArrows3D(scene) {
-		var origin = new THREE.Vector3(0,0,0);
-		var n = generators.length;
+			 var axis = new THREE.Line( geom, mat, THREE.LinePieces );
 
-		for ( var k = 0; k < n; ++k ) {
-			var v = generators[k];
-			var len = Geom3.norm(v);
-			v = Geom3.scale(1/len, v);
-			var dir = new THREE.Vector3(v.x, v.y, v.z);
-			var hex = 0x0;
-			var arrowHelper = new THREE.ArrowHelper(dir, origin, len, hex);
+			 return axis;
 
-			scene.add(arrowHelper);
-		}
-	}
+		 }
+		 /**
+			* Based on tutorial: http://soledadpenades.com/articles/three-js-tutorials/drawing-the-coordinate-axes/
+			* X axis: Red
+			* Y axis: Blue
+			* Z axis: Green
 
-	function renderFromInput() {
-		generators = getGenerators();
-		var drawFacetOutlines = false;
-		var degenerateData = false;
-		var opacity = 0.5;
-		zonotopeCanvas = new ZonotopeCanvas3(
-			generators,
-			drawFacetOutlines,
-			degenerateData,
-			'zonotope-canvas-container',
-			opacity
-		);
-		zonotopeCanvas.parentElement.innerHTML = "";
-		zonotopeCanvas.init();
-		zonotopeCanvas.axes = buildAxesXYZ(1000);
-		zonotopeCanvas.scene.add(zonotopeCanvas.axes);
+			*/
+		 function buildAxesXYZ( axisLength, colorX, colorY, colorZ ) {
 
-		renderGeneratorArrows3D(zonotopeCanvas.scene);
+			 var axes = new THREE.Object3D();
+			 colorX = colorX || 0xFF0000; // red
+			 colorY = colorY || 0x00FF00; // green
+			 colorZ = colorZ || 0x0000FF; // blue
 
-		zonotopeCanvas.animate();
-	}
 
-	</script>
+			 axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( axisLength, 0,  0 ), colorX, false ) ); // +X
+			 axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( -axisLength, 0, 0 ), colorX, true  ) ); // -X
 
-</body>
+			 axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, axisLength,  0 ), colorY, false ) ); // +Y
+			 axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, -axisLength, 0 ), colorY, true  ) ); // -Y
+
+			 axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, 0, axisLength  ), colorZ, false ) ); // +Z
+			 axes.add( buildSingleAxis( new THREE.Vector3( 0, 0, 0 ), new THREE.Vector3( 0, 0, -axisLength ), colorZ, true  ) ); // -Z
+
+			 return axes;
+		 }
+
+		 function renderGeneratorArrows3D(scene) {
+			 var origin = new THREE.Vector3(0,0,0);
+			 var n = generators.length;
+
+			 for ( var k = 0; k < n; ++k ) {
+				 var v = generators[k];
+				 var len = Geom3.norm(v);
+				 v = Geom3.scale(1/len, v);
+				 var dir = new THREE.Vector3(v.x, v.y, v.z);
+				 var hex = 0x0;
+				 var arrowHelper = new THREE.ArrowHelper(dir, origin, len, hex);
+
+				 scene.add(arrowHelper);
+			 }
+		 }
+
+		 function renderFromInput() {
+			 generators = getGenerators();
+			 var drawFacetOutlines = false;
+			 var degenerateData = false;
+			 var opacity = 0.5;
+			 var resolution = { width: 1920, height: 1080 };
+			 var interactive = true;
+			 zonotopeCanvas = new ZonotopeCanvas3(
+				 generators,
+				 drawFacetOutlines,
+				 degenerateData,
+				 'zonotope-canvas-container',
+				 opacity,
+				 resolution,
+				 interactive
+			 );
+			 zonotopeCanvas.parentElement.innerHTML = "";
+			 zonotopeCanvas.init();
+			 zonotopeCanvas.axes = buildAxesXYZ(1000);
+			 zonotopeCanvas.scene.add(zonotopeCanvas.axes);
+
+			 renderGeneratorArrows3D(zonotopeCanvas.scene);
+
+			 zonotopeCanvas.animate();
+		 }
+
+		</script>
+
+	</body>
 </html>
